
- Core:
  . Fixed bug #74780 (parse_url() borken when query string contains colon). 
    (jhdxr)
  . Fixed bug #74761 (Unary operator expected error on some systems). (petk)

- Opcache:
  . Fixed bug #74623 (Infinite loop in type inference when using HTMLPurifier).
    (nikic)

- OpenSSL:
 . Fixed bug #74798 (pkcs7_en/decrypt does not work if \x0a is used in content).
   (Anatol)

- SPL:
  . Fixed bug #73471 (PHP freezes with AppendIterator). (jhdxr)

06 Jul 2017, PHP 7.1.7

- Core:
  . Fixed bug #74738 (Multiple [PATH=] and [HOST=] sections not properly
    parsed). (Manuel Mausz)
  . Fixed bug #74658 (Undefined constants in array properties result in broken
    properties). (Laruence)
  . Fixed misparsing of abstract unix domain socket names. (Sara)

- Date:
  . Fixed bug #74639 (implement clone for DatePeriod and DateInterval).
    (andrewnester)

- DOM:
  . Fixed bug #69373 (References to deleted XPath query results). (ttoohey)

- Intl:
  . Fixed bug #73473 (Stack Buffer Overflow in msgfmt_parse_message). (libnex)
  . Fixed bug #74705 (Wrong reflection on Collator::getSortKey and
    collator_get_sort_key). (Tyson Andre, Remi)

- Mbstring:
  . Add oniguruma upstream fix (CVE-2017-9224, CVE-2017-9226, CVE-2017-9227,
    CVE-2017-9228, CVE-2017-9229) (Remi, Mamoru TASAKA)

- OCI8:
  . Add TAF callback (PR #2459). (KoenigsKind)
  . Fixed bug #74625 (Integer overflow in oci_bind_array_by_name). (Ingmar Runge)

- Opcache:
  . Fixed bug #74663 (Segfault with opcache.memory_protect and
    validate_timestamp). (Laruence)
  . Revert opcache.enable_cli to default disabled. (Nikita)

- OpenSSL:
  . Fixed bug #74720 (pkcs7_en/decrypt does not work if \x1a is used in
    content). (Anatol)

- PDO_OCI:
  . Support Instant Client 12.2 in --with-pdo-oci configure option.
    (Tianfang Yang)

- Reflection:
  . Fixed bug #74673 (Segfault when cast Reflection object to string with
    undefined constant). (Laruence)

- SPL: